--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #8AD2FA;
+}
+
+footer {
+  display: flex;
+  flex: row;
+  margin-top: 2em;
+  font-family: "Inter Tight";
+}
+
 h1 {
   font-size: 3.125rem;
   color: var(--gray-900);
@@ -37,12 +54,11 @@ p {
   color: var(--gray-700);
 }
 
-html, body {
-  height: 100%;
+.icon {
+  width: 1.5em;
+  height: 1.5em;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #8AD2FA;
+.footer-icon {
+  margin: 0 0.5em;
 }
