--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,11 @@
     </div>
   </div>
   <footer>
-    <img class="icon footer-icon" src="../assets/images/KillerCatLogo.jpg" />
     <p>
-      &copy; {{ year }} Killer Cat Studios
+      <!-- &copy; {{ year }} Killer Cat Studios -->
+      Brought to you by Killer Cat Studios
     </p>
+    <img class="icon footer-icon" src="../assets/images/KillerCatLogo.jpg" />
   </footer>
 </main>
 <router-outlet />
